# daemon

./: .gitignore  Cargo.toml  Dockerfile.cross  README.md  asound.conf  bluealsa-aplay.service  bluetooth-init.service  bluetooth-main.conf  bt-agent.py  bt-agent.service  build.sh  carplay-audio.service  flake.nix  setup-bluetooth.sh  setup.sh  shairport-sync.conf
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: airplay.rs  airplay_meta.rs  bluetooth.rs  bluetooth_meta.rs  dsp.rs  main.rs  output.rs  settings.rs  stats.rs
crates/service/src/server/: ble.rs  mod.rs  ws.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
