[package]
name = "carplay-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "carplay-audio"
path = "src/main.rs"

[dependencies]
carplay-protocol = { path = "../protocol" }
alsa = "0.9"
anyhow = "1"
libc = "0.2"
crossbeam-channel = "0.5"
ctrlc = { version = "3", features = ["termination"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
bluer = { version = "0.17", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dbus = "0.9"
base64 = "0.22"
